--- a/README.rdoc
+++ b/README.rdoc
@@ -9,3 +9,23 @@
     $ bundle
     $ rake db:create
     $ rake db:migrate
+
+    ## User Stories
+
+    As an end user, I want to be able to sign up for the app.
+
+    As an end user, I want to be able to save decisions.
+
+    As an end user, I want to be able to share decisions on social media.
+
+    As an end user, I want to be able to collapse sections of the Make A Decision form.
+
+    As an end user, I want to be able to comment on public decisions.
+
+    As an end user, I want to be able to mark a decision as public or private.
+
+    As an end user, I want to see a leaderboard of top Make A Decision users.
+
+    As an end user, I want to be able to like a decision.
+    
+    As an end user, I want to be able to save my decision to a PDF.
